// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomTextInput tests renders on android 1`] = `
Array [
  <Text
    style={
      Object {
        "fontSize": 15,
        "marginTop": 3,
      }
    }
  >
    test custom text input
  </Text>,
  <TextInput
    blurOnSubmit={true}
    maxLength={255}
    multiline={true}
    onChangeText={[Function]}
    onContentSizeChange={[Function]}
    onSubmitEditing={[Function]}
    placeholder="custom text input placeholder"
    returnKeyType="done"
    style={
      Array [
        Object {
          "backgroundColor": "#efefef",
          "borderColor": "gray",
          "borderRadius": 4,
          "borderWidth": 1,
          "minHeight": "8%",
          "paddingHorizontal": 15,
          "paddingVertical": 15,
        },
        Object {},
      ]
    }
    value=""
  />,
]
`;

exports[`CustomTextInput tests renders on ios 1`] = `
Array [
  <Text
    style={
      Object {
        "fontSize": 15,
        "marginTop": 3,
      }
    }
  >
    test custom text input
  </Text>,
  <TextInput
    blurOnSubmit={true}
    maxLength={255}
    multiline={true}
    onChangeText={[Function]}
    onContentSizeChange={[Function]}
    onSubmitEditing={[Function]}
    placeholder="custom text input placeholder"
    returnKeyType="done"
    style={
      Array [
        Object {
          "backgroundColor": "#efefef",
          "borderColor": "gray",
          "borderRadius": 4,
          "borderWidth": 1,
          "minHeight": "8%",
          "paddingHorizontal": 15,
          "paddingVertical": 15,
        },
        Object {
          "paddingTop": 15,
        },
      ]
    }
    value=""
  />,
]
`;
